--- a/Broadcast/Assets/Info.plist
+++ b/Broadcast/Assets/Info.plist
@@ -26,6 +26,8 @@
 	<true/>
 	<key>SERVICE_ROOT_URL</key>
 	<string>$(SERVICE_ROOT_URL)</string>
+	<key>DEBUG_UI_ENABLED</key>
+	<string>$(DEBUG_UI_ENABLED)</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
