--- a/Broadcast/Assets/Info.plist
+++ b/Broadcast/Assets/Info.plist
@@ -69,6 +69,28 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+        <string>Inter-Black.otf</string>
+        <string>Inter-BlackItalic.otf</string>
+        <string>Inter-Bold.otf</string>
+        <string>Inter-BoldItalic.otf</string>
+        <string>Inter-ExtraBold.otf</string>
+        <string>Inter-ExtraBoldItalic.otf</string>
+        <string>Inter-ExtraLight.otf</string>
+        <string>Inter-ExtraLightItalic.otf</string>
+        <string>Inter-Italic.otf</string>
+        <string>Inter-Light.otf</string>
+        <string>Inter-LightItalic.otf</string>
+        <string>Inter-Medium.otf</string>
+        <string>Inter-MediumItalic.otf</string>
+        <string>Inter-Regular.otf</string>
+        <string>Inter-SemiBold.otf</string>
+        <string>Inter-SemiBoldItalic.otf</string>
+        <string>Inter-Thin.otf</string>
+        <string>Inter-ThinItalic.otf</string>
+        <string>Inter-V.otf</string>
+	</array>
 	<key>UIUserInterfaceStyle</key>
 	<string>Light</string>
 </dict>
