--- a/Broadcast/Broadcast.entitlements
+++ b/Broadcast/Broadcast.entitlements
@@ -5,6 +5,8 @@
 	<key>com.apple.developer.associated-domains</key>
 	<array/>
 	<key>keychain-access-groups</key>
-	<array/>
+	<array>
+		<string>$(AppIdentifierPrefix)com.boomday.broadcast</string>
+	</array>
 </dict>
 </plist>
