Added new site url, wired up handle from the profile into the view model and controller

--- a/Broadcast/Configuration/Staging.xcconfig
+++ b/Broadcast/Configuration/Staging.xcconfig
@@ -11,6 +11,9 @@
 // Service URL
 SERVICE_ROOT_URL = https:/$()/api.boomday.dev/
 
+// Site URL
+SITE_ROOT_URL = https:/$()/boomday.dev/
+
 // Notifications Connection String
 NOTIFICATIONS_CONNECTION_STRING = Endpoint=sb:/$()/boom-dev-notifications.servicebus.windows.net/;SharedAccessKeyName=DefaultListenSharedAccessSignature;SharedAccessKey=Ob1SCxP74lKRQtFdgvYylM3FXqWFkj8l8H1MN9WtUQ8=
 
