--- a/Broadcast/Configuration/Development.xcconfig
+++ b/Broadcast/Configuration/Development.xcconfig
@@ -11,6 +11,10 @@
 // Service URL
 SERVICE_ROOT_URL = http:/localhost:5001/
 
+// Site URL
+SITE_ROOT_URL = https:/$()/localhost:/
+
+
 // Notifications Connection String
 NOTIFICATIONS_CONNECTION_STRING = Endpoint=sb:/$()/boom-dev-notifications.servicebus.windows.net/;SharedAccessKeyName=DefaultListenSharedAccessSignature;SharedAccessKey=Ob1SCxP74lKRQtFdgvYylM3FXqWFkj8l8H1MN9WtUQ8=
 
