--- a/Broadcast/Assets/Info.plist
+++ b/Broadcast/Assets/Info.plist
@@ -35,6 +35,8 @@
 	<string>Access to photo library is required to select photos for content</string>
 	<key>SERVICE_ROOT_URL</key>
 	<string>$(SERVICE_ROOT_URL)</string>
+	<key>SITE_ROOT_URL</key>
+	<string>$(SITE_ROOT_URL)</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Inter-Black.otf</string>
