--- a/Broadcast/Configuration/Development.xcconfig
+++ b/Broadcast/Configuration/Development.xcconfig
@@ -1,5 +1,5 @@
 //
-//  Development.xcconfig
+//  Staging.xcconfig
 //  Boomday
 //
 //  Created by Piotr Suwara on 17/11/20.
@@ -9,11 +9,10 @@
 // https://help.apple.com/xcode/#/dev745c5c974
 
 // Service URL
-SERVICE_ROOT_URL = http:/localhost:5001/
+SERVICE_ROOT_URL = https:/$()/api.boomday.dev/
 
 // Site URL
-SITE_ROOT_URL = https:/$()/localhost:/
-
+SITE_ROOT_URL = https:/$()/boomday.dev/
 
 // Notifications Connection String
 NOTIFICATIONS_CONNECTION_STRING = Endpoint=sb:/$()/boom-dev-notifications.servicebus.windows.net/;SharedAccessKeyName=DefaultListenSharedAccessSignature;SharedAccessKey=Ob1SCxP74lKRQtFdgvYylM3FXqWFkj8l8H1MN9WtUQ8=
@@ -22,7 +21,7 @@ NOTIFICATIONS_CONNECTION_STRING = Endpoint=sb:/$()/boom-dev-notifications.servic
 NOTIFICATIONS_HUB_NAME = default
 
 // App Settings
-APP_NAME = Broadcast (Dev)
+APP_NAME = Broadcast (Staging)
 APP_BUNDLE_ID = com.boomday.Broadcast
 
 DEBUG_UI_ENABLED = true
