New target with QA build

--- a/Broadcast/Configuration/Development.xcconfig
+++ b/Broadcast/Configuration/Development.xcconfig
@@ -22,6 +22,6 @@ NOTIFICATIONS_HUB_NAME = default
 
 // App Settings
 APP_NAME = Broadcast (Staging)
-APP_BUNDLE_ID = com.boomday.Broadcast
+APP_BUNDLE_ID = com.boomday.broadcast.qa
 
 DEBUG_UI_ENABLED = true
