Updated with correct provisioning profile. Production config now linked to production site and API

--- a/Broadcast/Configuration/LocalDevelopment.xcconfig
+++ b/Broadcast/Configuration/LocalDevelopment.xcconfig
@@ -22,7 +22,7 @@ NOTIFICATIONS_CONNECTION_STRING = Endpoint=sb:/$()/boom-dev-notifications.servic
 NOTIFICATIONS_HUB_NAME = default
 
 // App Settings
-APP_NAME = Broadcast (Dev)
+APP_NAME = Broadcast Dev
 APP_BUNDLE_ID = com.boomday.broadcast.qa
 
 DEBUG_UI_ENABLED = true
