--- a/Broadcast/Configuration/Production.xcconfig
+++ b/Broadcast/Configuration/Production.xcconfig
@@ -9,17 +9,11 @@
 // https://help.apple.com/xcode/#/dev745c5c974
 
 // Switch over when ready
-//// Service URL
-//SERVICE_ROOT_URL = https:/$()/api.boomday.com/
-//
-//// Site URL
-//SITE_ROOT_URL = https:/$()/frontend.boomday.com/
-
 // Service URL
-SERVICE_ROOT_URL = https:/$()/api.boomday.dev/
+SERVICE_ROOT_URL = https:/$()/api.boomday.com/
 
 // Site URL
-SITE_ROOT_URL = https:/$()/boomday.dev/
+SITE_ROOT_URL = https:/$()/frontend.boomday.com/
 
 // Notifications Connection String
 NOTIFICATIONS_CONNECTION_STRING = Endpoint=sb:/$()/boom-prod-notifications.servicebus.windows.net/;SharedAccessKeyName=DefaultListenSharedAccessSignature;SharedAccessKey=Ob1SCxP74lKRQtFdgvYylM3FXqWFkj8l8H1MN9WtUQ8=
